variadics/tests/compile-fail/var_type_badtype_call.rs
use variadics::*;

fn main() {
    type _List = var_type!(String, u32, MyIdent(), bool);
}
